update key properties

--- a/android/key.properties
+++ b/android/key.properties
@@ -1,4 +1,4 @@
 storePassword=123456
 keyPassword=123456
 keyAlias=key
-storeFile=C:/Users/Ivander/key.jks
+storeFile=C:/Users/Ivander/Documents/key/key.jks
